# pyhipp-sims

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish-to-test-pypi.yml  run-test.yml
docs/: load_simulation_info.ipynb
src/pyhipp_sims/: __init__.py
src/pyhipp_sims/data/sims/runs/: elucid_ext_v2.json  elucid_w9l3ha.json  elucid_w9l3ha_ext_v2.json  tng_300_1.json  tng_50_1.json  tng_dark.json  tng_dark_100_3.json  tng_dark_300_3.json
src/pyhipp_sims/data/simulations/: eagle.json  eagle_test.json  elucid.json  elucid_ext.json  millennium_2_scaled_wmap7.json  sam_mah_z10.json  sam_mah_z25.json  tng.json  tng_dark_300_1.json  tng_dark_50_3.json
src/pyhipp_sims/sims/: __init__.py  abc.py  groups.py  sim_info.py  snapshots.py  tree_branches.py  trees.py
tests/__init__.py/test_pyhipp_sims/test_sims/: test_load_sim_meta.py
workflows/: publish-to-test-pypi.yml
